# 11

./: cert.pem  key.pem  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
.kiro/specs/classroom-management-system/: requirements.md
server/: index.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  windows_capture_handler.rs
