[package]
name = "quan-ly-phong-may"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quan_ly_phong_may_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.24"
base64 = "0.22"

# Screen capture (original scrap - simpler than RustDesk's fork)
scrap = "0.5"

# Input simulation (like RustDesk)
rdev = "0.5"

# Async runtime for networking
tokio = { version = "1", features = ["full", "net", "io-util", "sync"] }

# Utils
lazy_static = "1.4"
parking_lot = "0.12"

# H.264 encoding
openh264 = "0.7"

# Network utilities
local-ip-address = "0.6"
mac_address = "1.1"

# File transfer
sha2 = "0.10"
hex = "0.4"

